// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonContent renders correctly with defaults 1`] = `
.emotion-2 {
  height: 6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 100%;
}

.emotion-0 {
  color: white;
  text-transform: uppercase;
  position: absolute;
  top: 5px;
  left: 7px;
  font-size: 1rem;
}

.emotion-1 {
  color: #626262;
  font-size: 2.25rem;
  -webkit-letter-spacing: -0.0625rem;
  -moz-letter-spacing: -0.0625rem;
  -ms-letter-spacing: -0.0625rem;
  letter-spacing: -0.0625rem;
}

<ButtonContent
  Icon={null}
  fieldLabel={null}
  placeHolder={null}
  values={Array []}
>
  <div
    className="emotion-2"
  >
    <span
      className="emotion-0"
    />
    <div
      className="emotion-1"
    />
  </div>
</ButtonContent>
`;

exports[`ButtonContent renders correctly with props provided 1`] = `
.emotion-3 {
  height: 6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 100%;
}

.emotion-0 {
  color: white;
  text-transform: uppercase;
  position: absolute;
  top: 5px;
  left: 7px;
  font-size: 1rem;
}

.emotion-1 {
  color: #626262;
  font-size: 2.25rem;
  -webkit-letter-spacing: -0.0625rem;
  -moz-letter-spacing: -0.0625rem;
  -ms-letter-spacing: -0.0625rem;
  letter-spacing: -0.0625rem;
}

.emotion-2 {
  position: absolute;
  right: 10px;
  fill: #626262;
}

<ButtonContent
  Icon={[Function]}
  fieldLabel="Departing"
  placeHolder="Departing From?"
  values={Array []}
>
  <div
    className="emotion-3"
  >
    <span
      className="emotion-0"
    >
      Departing
    </span>
    <div
      className="emotion-1"
    >
      Departing From?
    </div>
    <DummyIcon
      className="emotion-2"
      height="36"
      width="36"
    >
      <div>
        ICON
      </div>
    </DummyIcon>
  </div>
</ButtonContent>
`;

exports[`ButtonContent renders correctly with values provided 1`] = `
.emotion-9 {
  height: 6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 100%;
}

.emotion-0 {
  color: white;
  text-transform: uppercase;
  position: absolute;
  top: 5px;
  left: 7px;
  font-size: 1rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  max-width: 100%;
}

.emotion-4 {
  color: white;
  margin: 0 15px;
  font-size: 36px;
  margin-bottom: 20px;
}

.emotion-3 {
  max-width: 100%;
  min-width: 0;
}

.emotion-1 {
  color: #fff;
  font-size: 2.25rem;
  -webkit-letter-spacing: -0.0625rem;
  -moz-letter-spacing: -0.0625rem;
  -ms-letter-spacing: -0.0625rem;
  letter-spacing: -0.0625rem;
  line-height: 2.65rem;
}

.emotion-2 {
  color: #fff;
  font-size: 1.125rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

<ButtonContent
  Icon={[Function]}
  fieldLabel="Departing"
  placeHolder="Departing From?"
  values={
    Array [
      Object {
        "large": "18",
        "small": "Tue, May 2019",
      },
      Object {
        "large": "20",
        "small": "Thu, May 2019",
      },
    ]
  }
>
  <div
    className="emotion-9"
  >
    <span
      className="emotion-0"
    >
      Departing
    </span>
    <ButtonValues
      firstValue={
        Object {
          "large": "18",
          "small": "Tue, May 2019",
        }
      }
      secondValue={
        Object {
          "large": "20",
          "small": "Thu, May 2019",
        }
      }
    >
      <div
        className="emotion-8"
      >
        <ButtonValue
          large="18"
          small="Tue, May 2019"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-1"
            >
              18
            </div>
            <div
              className="emotion-2"
            >
              Tue, May 2019
            </div>
          </div>
        </ButtonValue>
        <div
          className="emotion-4"
        >
          -
        </div>
        <ButtonValue
          large="20"
          small="Thu, May 2019"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-1"
            >
              20
            </div>
            <div
              className="emotion-2"
            >
              Thu, May 2019
            </div>
          </div>
        </ButtonValue>
      </div>
    </ButtonValues>
  </div>
</ButtonContent>
`;
